starting to split into more defined onion layers

--- a/OnionArchitectureDemo.DependencyInjection/OnionArchitectureDemo.DependencyInjection.csproj
+++ b/OnionArchitectureDemo.DependencyInjection/OnionArchitectureDemo.DependencyInjection.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OnionArchitecture.Data.EntityFramework\OnionArchitectureDemo.Data.EntityFramework.csproj" />
-    <ProjectReference Include="..\OnionArchitectureDemo.Business\OnionArchitectureDemo.Business.csproj" />
+    <ProjectReference Include="..\OnionArchitectureDemo.DomainServices\OnionArchitectureDemo.DomainServices.csproj" />
   </ItemGroup>
 
   <ItemGroup>
