Moved IRepository into domainservices, renamed data layer to domain

--- a/OnionArchitecture.Data.EntityFramework/OnionArchitectureDemo.Data.EntityFramework.csproj
+++ b/OnionArchitecture.Data.EntityFramework/OnionArchitectureDemo.Data.EntityFramework.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OnionArchitecture.Data\OnionArchitectureDemo.Data.csproj" />
+    <ProjectReference Include="..\OnionArchitecture.Data\OnionArchitectureDemo.Domain.csproj" />
+    <ProjectReference Include="..\OnionArchitectureDemo.DomainServices\OnionArchitectureDemo.DomainServices.csproj" />
   </ItemGroup>
 
 </Project>
