--- a/OnionArchitectureDemo.DomainServices/OnionArchitectureDemo.DomainServices.csproj
+++ b/OnionArchitectureDemo.DomainServices/OnionArchitectureDemo.DomainServices.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OnionArchitecture.Data\OnionArchitectureDemo.Data.csproj" />
+    <ProjectReference Include="..\OnionArchitecture.Data\OnionArchitectureDemo.Domain.csproj" />
   </ItemGroup>
 
 </Project>
