refactored application layer

--- a/OnionArchitectureDemo.ApplicationServices/OnionArchitectureDemo.ApplicationServices.csproj
+++ b/OnionArchitectureDemo.ApplicationServices/OnionArchitectureDemo.ApplicationServices.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\OnionArchitectureDemo.DomainServices\OnionArchitectureDemo.DomainServices.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Cars\Commands\" />
+  </ItemGroup>
+
 </Project>
