Added first xUnit test for data.static layer
Required changing all projects to netcoreapp instead of net standard - which was fine

--- a/OnionArchitecture.Data/OnionArchitectureDemo.Domain.csproj
+++ b/OnionArchitecture.Data/OnionArchitectureDemo.Domain.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>OnionArchitectureDemo.Data</AssemblyName>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>OnionArchitectureDemo.Domain</AssemblyName>
   </PropertyGroup>
 
 </Project>
